--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_screenutil: ^5.6.0
+  chat_gpt_sdk: ^2.0.0
+  http: ^1.1.0
+  get_it: ^7.6.0
+  shimmer: ^3.0.0
+  cached_network_image: ^3.2.3
+  flutter_staggered_grid_view: ^0.7.0
+  share_plus: ^7.1.0
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +69,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
